--- a/arch/arm64/configs/hikey970_defconfig
+++ b/arch/arm64/configs/hikey970_defconfig
@@ -744,4 +744,7 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 
 
 
-
+CONFIG_ANDROID_PARANOID_NETWORK=n
+CONFIG_ANDROID=n
+CONFIG_ANDROID_BINDER_IPC=n
+CONFIG_ANDROID_LOW_MEMORY_KILLER=n
