--- a/arch/arm64/configs/hikey970_defconfig
+++ b/arch/arm64/configs/hikey970_defconfig
@@ -655,8 +655,8 @@ CONFIG_PHY_HI6220_USB=y
 CONFIG_PHY_KIRIN970_USB=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_TEGRA_XUSB=y
-CONFIG_ANDROID=n
-CONFIG_ANDROID_BINDER_IPC=n
+CONFIG_ANDROID=y
+CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_ACPI=y
 CONFIG_EXT2_FS=y
