--- a/arch/arm64/configs/hikey970_defconfig
+++ b/arch/arm64/configs/hikey970_defconfig
@@ -226,6 +226,7 @@ CONFIG_BT_LEDS=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_HIDP=y
+CONFIG_BT_BNEP=y
 # CONFIG_BT_HS is not set
 # CONFIG_BT_LE is not set
 # CONFIG_BT_DEBUGFS is not set
